ci: include demo and snapshot changes in PR checks

--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -6,6 +6,8 @@ on:
       - main
     paths:
       - 'STXMarkdownView/**'
+      - 'MarkdownDemo/**'
+      - 'MarkdownDemoSnapshotTests/**'
       - 'MarkdownDemo.xcodeproj/**'
       - 'Package.swift'
       - '.swiftlint.yml'
